--- a/index.html
+++ b/index.html
@@ -23,16 +23,26 @@
             <!-- <img id="header-icon" src="./resources/images/developer-woman.png" alt="woman developer icon"> -->
             <p>Aangenaam, een vrouwelijke IT'er</p>
     </div>
+
     <!-- Another section -->
     <div class="keuzemenu">
         <h2>H2 titel</h2> 
         <p>Meer info en tekst</p>
-        <ul>
-                <li>Learn to code</li>
-                <li>Start a company</li>
-                <li>Help the world</li>
-              </ul>
-</div>
+        <!-- Keuzeblokken -->
+        <div class="answer">
+            <h4>Disagree</h3>
+        </div>
+
+        <div class="answer">
+         <h4>Neutral</h3>
+        </div>
+
+        <div class="answer">
+          <h4>Agree</h3>
+        </div>
+    </div>
+
+
 <!-- Another section -->
 <div class="nogbedenken">
         <h3>Weg bij het aanrecht</h3> 
