--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="nl">
 <head>
+        <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Poiret+One|Quicksand&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -45,7 +46,7 @@
 
 <!-- Another section -->
 <div class="nogbedenken">
-        <h3>Weg bij het aanrecht</h3> 
+        <h3>Opgeruimd bureau verlangt naar werk</h3> 
         <p>Meer info en tekst<br>
             Meer info en tekst<br>
             Meer info en tekst<br>
